--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "snake",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rakeshtembhurne.github.io/snake-game",
   "dependencies": {
     "aws-amplify": "^1.1.28",
     "gh-pages": "^2.0.1",
@@ -12,7 +11,7 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --open",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
